main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "3.26.0"
    }
    random = {
      source  = "hashicorp/random"
      version = "3.0.1"
    }
  }
  required_version = ">= 0.14"

  backend "remote" {
    organization = "ichtar"

    workspaces {
      name = "gh-actions-demo"
    }
  }
}

# Configure the AWS Provider
provider "aws" {
  region = "eu-west-3"
}
data "aws_kms_secrets" "example" {
  secret {
    name    = "secret_key"
    payload = "AQICAHjx3l2NzFJPqRwiXR7uMVW80VaLN1EOI1ZMnp9SqvY/YgHuZFGq2nZ/y0aJiZM2i9TvAAAHEDCCBwwGCSqGSIb3DQEHBqCCBv0wggb5AgEAMIIG8gYJKoZIhvcNAQcBMB4GCWCGSAFlAwQBLjARBAxL6MSQvdi6KgoRd4MCARCAggbDUPIkzK3nv/9jPF+A1L16un268WeAHFdawcP7P6DEoGxB2Dw1qYcy/eMeaGhzzTYNwOnwry3GzlHa4/e0U3usrIjsInuTKHARMs9imB0qcg1YCPd1MG197su8p1q+kp257TBhd+rrhw/ZD401kp+9UrCWq1VJ/rqeBn4+61WIcygAIyFQnCptFa1XIOo/56n7SBLihgad0w+4uCPJUapwEvd/NZ+wLVBH1ltaN0oEiJH+P86sbeX35pdoqYzHPYxWruoUqBEVAZx9HCRERz7ejrcvn+CmHD2CNPhzfMIi6U6d5Lc+L [...]
    context = {
      foo = "bar"
    }
  }
  secret {
    name    = "docker-compose"
    payload = "AQICAHjx3l2NzFJPqRwiXR7uMVW80VaLN1EOI1ZMnp9SqvY/YgFoinYH3i9zNUR6i0+VTBjWAAAGKDCCBiQGCSqGSIb3DQEHBqCCBhUwggYRAgEAMIIGCgYJKoZIhvcNAQcBMB4GCWCGSAFlAwQBLjARBAwhdbxO8BVfHu9XN44CARCAggXbvuZaFurqey6c5odd66io03Rtt4GBm53fLDii2Zcc0UPkar8vmZsQXvhj6OYdtaGWy/PtOlMZdNfINbHCTM9bqI/dqutzuh5w8EOHTSdE+a9w7MrZZ3qMAk6IBesO+P+HLCHjsQPKI9w6QN4yqd7lQK9WWRsSv7AZULuGmYleYQVgNFxhCHWVcw3mUxhf3dEZEVpLXLqL5vSlNKbg+qAAB+WQtWLOk+7zMl4oom8ZwZ5lLFmFDlKQuQ0Zcm9f88DqajVSs5S7JUjUTeJOy4J5829/1SUgKMfTKYd7FygLgZN6ECNza [...]
    context = {
      foo = "bar"
    }
  }
}
resource "aws_security_group" "allow_ssh" {
  name        = "allow_ssh"
  description = "Allow SSH inbound traffic"

  ingress {
    description      = "SSH from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  ingress {
    description      = "node from VPC"
    from_port        = 3000
    to_port          = 3000
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }


  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_tls"
  }
}

resource "aws_instance" "vpn" {
  #  ami                    = "ami-03ff1df0309de1eb0"
  ami                    = "ami-05f46207225f7e094"
  instance_type          = "t2.micro"
  key_name               = "mine2"
  vpc_security_group_ids = [aws_security_group.allow_ssh.id]

  tags = {
    Name = "vpn"
  }
  provisioner "file" {
    content     = data.aws_kms_secrets.example.plaintext["docker-compose"]
    destination = "docker-compose.yml"

    connection {
      host        = self.public_dns
      user        = "admin"
      private_key = data.aws_kms_secrets.example.plaintext["secret_key"]
    }
  }
  provisioner "remote-exec" {
    inline = [
      "docker-compose up -d",
    ]
    connection {
      host        = self.public_dns
      user        = "admin"
      private_key = data.aws_kms_secrets.example.plaintext["secret_key"]
    }
  }
}
